[package]
name = "TempVoiceRust"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12.2", features = ["framework", "standard_framework", "client", "gateway", "rustls_backend"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.83"
rusqlite = { version = "0.32.1", features = ["bundled"] }
