[package]
name = "TempVoiceRust"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12.4", features = ["framework", "standard_framework", "client", "gateway", "rustls_backend"] }
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
async-trait = "0.1.83"
rusqlite = { version = "0.33.0", features = ["bundled"] }
rand = "0.9.0-beta.1"